
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int BOOL ;


 int FALSE ;
 int GetOEMCP () ;
 int TRUE ;

__attribute__((used)) static BOOL IsCJKCodePage(void)
{
    switch (GetOEMCP())
    {
    case 936:
    case 932:
    case 949:
    case 1361:
    case 950:
        return TRUE;
    }
    return FALSE;
}
