; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/apitests/kernel32/extr_ConsoleCP.c_IsCJKCodePage.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/apitests/kernel32/extr_ConsoleCP.c_IsCJKCodePage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @IsCJKCodePage to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @IsCJKCodePage() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 (...) @GetOEMCP()
  switch i32 %2, label %5 [
    i32 936, label %3
    i32 932, label %3
    i32 949, label %3
    i32 1361, label %3
    i32 950, label %3
  ]

3:                                                ; preds = %0, %0, %0, %0, %0
  %4 = load i32, i32* @TRUE, align 4
  store i32 %4, i32* %1, align 4
  br label %7

5:                                                ; preds = %0
  %6 = load i32, i32* @FALSE, align 4
  store i32 %6, i32* %1, align 4
  br label %7

7:                                                ; preds = %5, %3
  %8 = load i32, i32* %1, align 4
  ret i32 %8
}

declare dso_local i32 @GetOEMCP(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
